[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/bg.png" type="Texture" id=1]
[ext_resource path="res://scenes/environment/blocks.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/player/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/components/hints.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/finish/finish.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/level.gd" type="Script" id=6]
[ext_resource path="res://scenes/environment/thorns.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/objects/ladder/ladder.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/objects/box/box.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/objects/key/key.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/objects/door/door.tscn" type="PackedScene" id=11]

[node name="Level4" type="Node2D"]
script = ExtResource( 6 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 0.5 )
motion_mirroring = Vector2( 960, 720 )

[node name="bg" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 1 )
centered = false

[node name="Blocks" parent="." instance=ExtResource( 2 )]
cell_size = Vector2( 16, 16 )
tile_data = PoolIntArray( -1375997, 0, 0, -1310461, 0, 0, -1244925, 0, 0, -1179389, 0, 0, -1113853, 0, 0, -1048317, 0, 0, -982781, 0, 0, -917245, 0, 0, -851709, 0, 0, -786173, 0, 0, -720637, 0, 0, -589847, 0, 0, -655101, 0, 0, -524311, 0, 0, -589565, 0, 0, -458775, 0, 0, -524029, 0, 0, -393239, 0, 0, -458493, 0, 0, -327703, 0, 0, -392957, 0, 0, -262167, 0, 0, -327421, 0, 0, -196631, 0, 0, -261885, 0, 0, -131095, 0, 0, -196349, 0, 0, -65559, 0, 0, -130813, 0, 0, -23, 0, 0, -65277, 0, 0, 65513, 0, 0, 259, 0, 0, 131049, 0, 0, 65795, 0, 0, 196585, 0, 0, 131331, 0, 0, 262121, 0, 0, 196867, 0, 0, 327657, 0, 0, 262403, 0, 0, 393193, 0, 0, 327939, 0, 0, 458729, 0, 0, 393475, 0, 0, 524265, 0, 0, 459011, 0, 0, 589801, 0, 0, 524547, 0, 0, 655337, 0, 0, 590083, 0, 0, 720873, 0, 0, 655619, 0, 0, 786409, 0, 0, 721155, 0, 0, 851945, 0, 0, 786691, 0, 0, 917481, 0, 0, 852227, 0, 0, 983017, 0, 0, 917763, 0, 0, 1048553, 0, 0, 983299, 0, 0, 1114089, 0, 0, 1048835, 0, 0, 1179625, 0, 0, 1114371, 0, 0, 1245161, 0, 0, 1179907, 0, 0, 1310697, 0, 0, 1245443, 0, 0, 1376233, 0, 0, 1310979, 0, 0, 1441769, 0, 0, 1376515, 0, 0, 1507305, 0, 0, 1442051, 0, 0, 1572841, 0, 0, 1507587, 0, 0, 1638377, 0, 0, 1573123, 0, 0, 1703913, 0, 0, 1638659, 0, 0, 1769449, 0, 0, 1704195, 0, 0, 1834985, 0, 0, 1769731, 0, 0, 1900521, 0, 0, 1835267, 0, 0, 1966057, 0, 0, 1900803, 0, 0, 2031593, 0, 0, 1966339, 0, 0, 2097129, 0, 0, 2031875, 0, 0, 2162665, 0, 0, 2097411, 0, 0, 2228201, 0, 0, 2162947, 0, 0, 2293737, 0, 0, 2228483, 0, 0, 2359273, 0, 0, 2294019, 0, 0, 2424809, 0, 0, 2424810, 0, 0, 2424811, 0, 0, 2424812, 0, 0, 2424813, 0, 0, 2424814, 0, 0, 2424815, 0, 0, 2424816, 0, 0, 2424817, 0, 0, 2424818, 0, 0, 2424819, 0, 0, 2424820, 0, 0, 2424821, 0, 0, 2424822, 0, 0, 2424823, 0, 0, 2424824, 0, 0, 2424825, 0, 0, 2424826, 0, 0, 2424827, 0, 0, 2424828, 0, 0, 2424829, 0, 0, 2424830, 0, 0, 2424831, 0, 0, 2359296, 0, 0, 2359297, 0, 0, 2359298, 0, 0, 2359299, 0, 0, 2359300, 0, 0, 2359301, 0, 0, 2359302, 0, 0, 2359303, 0, 0, 2359304, 0, 0, 2359305, 0, 0, 2359306, 0, 0, 2359307, 0, 0, 2359308, 0, 0, 2359309, 0, 0, 2359310, 0, 0, 2359311, 0, 0, 2359312, 0, 0, 2359313, 0, 0, 2359314, 0, 0, 2359315, 0, 0, 2359316, 0, 0, 2359317, 0, 0, 2359318, 0, 0, 2359319, 0, 0, 2359320, 0, 0, 2359321, 0, 0, 2359322, 0, 0, 2359323, 0, 0, 2359324, 0, 0, 2359325, 0, 0, 2359326, 0, 0, 2359327, 0, 0, 2359328, 0, 0, 2359329, 0, 0, 2359330, 0, 0, 2359331, 0, 0, 2359332, 0, 0, 2359333, 0, 0, 2359334, 0, 0, 2359335, 0, 0, 2359336, 0, 0, 2359337, 0, 0, 2359338, 0, 0, 2359339, 0, 0, 2359340, 0, 0, 2359341, 0, 0, 2359342, 0, 0, 2359343, 0, 0, 2359344, 0, 0, 2359345, 0, 0, 2359346, 0, 0, 2359347, 0, 0, 2359348, 0, 0, 2359349, 0, 0, 2359350, 0, 0, 2359351, 0, 0, 2359352, 0, 0, 2359353, 0, 0, 2359354, 0, 0, 2359355, 0, 0, 2359356, 0, 0, 2359357, 0, 0, 2359358, 0, 0, 2359359, 0, 0, 2359360, 0, 0, 2359361, 0, 0, 2359362, 0, 0, 2359363, 0, 0, 2359364, 0, 0, 2359365, 0, 0, 2359366, 0, 0, 2359367, 0, 0, 2359368, 0, 0, 2359369, 0, 0, 2359370, 0, 0, 2359371, 0, 0, 2359372, 0, 0, 2359373, 0, 0, 2359374, 0, 0, 2359375, 0, 0, 2359376, 0, 0, 2359377, 0, 0, 2359378, 0, 0, 2359379, 0, 0, 2359380, 0, 0, 2359381, 0, 0, 2359382, 0, 0, 2359383, 0, 0, 2359384, 0, 0, 2359385, 0, 0, 2359386, 0, 0, 2359387, 0, 0, 2359388, 0, 0, 2359389, 0, 0, 2359390, 0, 0, 2359391, 0, 0, 2359392, 0, 0, 2359393, 0, 0, 2359394, 0, 0, 2359395, 0, 0, 2359396, 0, 0, 2359397, 0, 0, 2359398, 0, 0, 2359399, 0, 0, 2359400, 0, 0, 2359401, 0, 0, 2359402, 0, 0, 2359403, 0, 0, 2359404, 0, 0, 2359405, 0, 0, 2359406, 0, 0, 2359407, 0, 0, 2359408, 0, 0, 2359409, 0, 0, 2359410, 0, 0, 2359411, 0, 0, 2359412, 0, 0, 2359413, 0, 0, 2359414, 0, 0, 2359415, 0, 0, 2359416, 0, 0, 2359417, 0, 0, 2359418, 0, 0, 2359419, 0, 0, 2359420, 0, 0, 2359421, 0, 0, 2359422, 0, 0, 2359423, 0, 0, 2359424, 0, 0, 2359425, 0, 0, 2359426, 0, 0, 2359427, 0, 0, 2359428, 0, 0, 2359429, 0, 0, 2359430, 0, 0, 2359431, 0, 0, 2359432, 0, 0, 2359433, 0, 0, 2359434, 0, 0, 2359435, 0, 0, 2359436, 0, 0, 2359437, 0, 0, 2359438, 0, 0, 2359439, 0, 0, 2359440, 0, 0, 2359441, 0, 0, 2359442, 0, 0, 2359443, 0, 0, 2359444, 0, 0, 2359445, 0, 0, 2359446, 0, 0, 2359447, 0, 0, 2359448, 0, 0, 2359449, 0, 0, 2359450, 0, 0, 2359451, 0, 0, 2359452, 0, 0, 2359453, 0, 0, 2359454, 0, 0, 2359455, 0, 0, 2359456, 0, 0, 2359457, 0, 0, 2359458, 0, 0, 2359459, 0, 0, 2359460, 0, 0, 2359461, 0, 0, 2359462, 0, 0, 2359463, 0, 0, 2359464, 0, 0, 2359465, 0, 0, 2359466, 0, 0, 2359467, 0, 0, 2359468, 0, 0, 2359469, 0, 0, 2359470, 0, 0, 2359471, 0, 0, 2359472, 0, 0, 2359473, 0, 0, 2359474, 0, 0, 2359475, 0, 0, 2359476, 0, 0, 2359477, 0, 0, 2359478, 0, 0, 2359479, 0, 0, 2359480, 0, 0, 2359481, 0, 0, 2359482, 0, 0, 2359483, 0, 0, 2359484, 0, 0, 2359485, 0, 0, 2359486, 0, 0, 2359487, 0, 0, 2359488, 0, 0, 2359489, 0, 0, 2359490, 0, 0, 2359491, 0, 0, 2359492, 0, 0, 2359493, 0, 0, 2359494, 0, 0, 2359495, 0, 0, 2359496, 0, 0, 2359497, 0, 0, 2359498, 0, 0, 2359499, 0, 0, 2359500, 0, 0, 2359501, 0, 0, 2359502, 0, 0, 2359503, 0, 0, 2359504, 0, 0, 2359505, 0, 0, 2359506, 0, 0, 2359507, 0, 0, 2359508, 0, 0, 2359509, 0, 0, 2359510, 0, 0, 2359511, 0, 0, 2359512, 0, 0, 2359513, 0, 0, 2359514, 0, 0, 2359515, 0, 0, 2359516, 0, 0, 2359517, 0, 0, 2359518, 0, 0, 2359519, 0, 0, 2359520, 0, 0, 2359521, 0, 0, 2359522, 0, 0, 2359523, 0, 0, 2359524, 0, 0, 2359525, 0, 0, 2359526, 0, 0, 2359527, 0, 0, 2359528, 0, 0, 2359529, 0, 0, 2359530, 0, 0, 2359531, 0, 0, 2359532, 0, 0, 2359533, 0, 0, 2359534, 0, 0, 2359535, 0, 0, 2359536, 0, 0, 2359537, 0, 0, 2359538, 0, 0, 2359539, 0, 0, 2359540, 0, 0, 2359541, 0, 0, 2359542, 0, 0, 2359543, 0, 0, 2359544, 0, 0, 2359545, 0, 0, 2359546, 0, 0, 2359547, 0, 0, 2359548, 0, 0, 2359549, 0, 0, 2359550, 0, 0, 2359551, 0, 0, 2359552, 0, 0, 2359553, 0, 0, 2359554, 0, 0, 2359555, 0, 0 )

[node name="Thorns" parent="." instance=ExtResource( 7 )]

[node name="Finish" parent="." instance=ExtResource( 5 )]
position = Vector2( 450.321, -367.469 )
scale = Vector2( 0.75, 0.75 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 200, 376 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_bottom = 0.8
editor_draw_drag_margin = true

[node name="Box" parent="." instance=ExtResource( 9 )]
position = Vector2( 213.169, -220.73 )
scale = Vector2( 1.00825, 1.00715 )

[node name="Key" parent="." instance=ExtResource( 10 )]
position = Vector2( 554, -498 )

[node name="Door" parent="." instance=ExtResource( 11 )]
position = Vector2( 91.6788, -347.843 )
scale = Vector2( 1.5, 2 )

[node name="Ladder" parent="." instance=ExtResource( 8 )]
margin_left = 672.646
margin_top = -776.017
margin_right = 703.646
margin_bottom = -570.017

[node name="Hints" parent="." instance=ExtResource( 4 )]
margin_left = -118.721
margin_top = 275.757
margin_right = 315.279
margin_bottom = 336.757
text = "You escaped! Yay!
"

[node name="Hints2" parent="." instance=ExtResource( 4 )]
margin_left = 721.401
margin_top = 330.912
margin_right = 1155.4
margin_bottom = 391.912
text = "Hope you liked the game!
"

[node name="Hints3" parent="." instance=ExtResource( 4 )]
margin_left = 1553.01
margin_top = 192.348
margin_right = 1987.01
margin_bottom = 253.348
rect_pivot_offset = Vector2( 1861.33, 0 )
text = "More levels on it's way!
"

[node name="Hints4" parent="." instance=ExtResource( 4 )]
margin_left = 2745.84
margin_top = 172.171
margin_right = 3221.84
margin_bottom = 297.171
text = "Follow me on 
dataoverflow.itch.io
To get notified on the updates!
"

[node name="Hints5" parent="." instance=ExtResource( 4 )]
margin_left = 2055.16
margin_top = 197.382
margin_right = 2489.16
margin_bottom = 258.382
rect_pivot_offset = Vector2( 1861.33, 0 )
text = "Building more levels 
more gameplay mechanics
level editor
and much more!
"

[node name="Hints6" parent="." instance=ExtResource( 4 )]
margin_left = 3636.65
margin_top = 201.906
margin_right = 4070.65
margin_bottom = 358.906
rect_pivot_offset = Vector2( 1861.33, 0 )
text = "Bye for now :)
"

[connection signal="finished" from="Finish" to="." method="_on_Finish_finished"]
[connection signal="dead" from="Player" to="." method="_on_Player_dead"]
[connection signal="restart" from="Player" to="." method="_on_Player_restart"]
